# voice_modulator

./: .gitignore  README.md
app/: layout.tsx  page.tsx
backend/: enhanced_audio_processor.py  enhanced_backend.py  requirements.txt  tts_engine.py
backend/cpp/: CMakeLists.txt  audio_processor.cpp  audio_processor.h
backend/python/: audio_engine.py  backend.py  requirements.txt
components/: profiles-list.tsx  voice-visualizer.tsx
electron_app/: index.html  main.js  package.json  renderer.js
lib/: websocket.ts
voice_mod_env/: pyvenv.cfg
voice_mod_env/Scripts/: activate  activate.bat
